--- a/index.html
+++ b/index.html
@@ -10,4 +10,9 @@
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
+  <link
+  href="https://cdnjs.cloudflare.com/ajax/libs/line-awesome/1.3.0/line-awesome/css/line-awesome.min.css"
+  rel="stylesheet"
+/>
+
 </html>
